2007-05-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberdctl.template: Updated version of ejabberdctl (thanks
	to Christophe Romain)
	* tools/ejabberdctl: Likewise
	* src/Makefile.in: Updated

	* src/ejabberd_sm.erl: Updated the session table to store
	additional session info
	* src/ejabberd_c2s.erl: Report IP address to ejabberd_sm (thanks
	to Christophe Romain)

2007-05-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/zh.msg: New chinese translation (thanks to Shelley
	Shyan)

2007-05-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Corrected error messages when
	trying to join members-only room (thanks to Badlop)

	* src/ejabberd_c2s.erl: Added c2s_update_presence hook

2007-05-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Bugfix (thanks to Badlop)

2007-05-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth.erl: Added get_vh_registered_users_number/1
	function
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/odbc/odbc_queries.erl: Added users_number/1 function
	* src/ejabberd.cfg.example: Added an example for
	pgsql_users_number_estimate option
	* src/mod_stats.erl: Updated
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/ejabberd_auth_anonymous.erl: Added anonymous_purge_hook
	(thanks to Christophe Romain and Mickael Remond)
	* src/mod_offline.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_roster.erl: Likewise
	* src/mod_roster_odbc.erl: Likewise

2007-05-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Bugfix

2007-05-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_receiver.erl: Workaround for inet_drv bug

	* src/web/ejabberd_http_poll.erl: Added sockname/1 and peername/1
	stubs

	* src/web/ejabberd_http.hrl: Added "ip" field in the "request"
	record (thanks to Jerome Sautret and Mickael Remond)
	* src/web/ejabberd_http.erl: Likewise

2007-05-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Added set_presence_hook