@@ -1,3 +1,13 @@
+2007-05-29  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/mod_vcard.erl: Make services description translatable in 
+	discovery (EJAB-236 - thanks to Badlop)
+	* src/mod_muc/mod_muc.erl: Likewise
+	* src/mod_irc/mod_irc.erl: Likewise
+	* src/mod_pubsub/mod_pubsub.erl: Likewise
+	* src/mod_proxy65/mod_proxy65_service.erl: Likewise
+	* src/msgs/fr.msg: Added service description translation
+
 2007-05-21  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberdctl.template: Updated version of ejabberdctl (thanks
